infrastructure/controllers/staging/velero/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velero-ui-ingress
  namespace: velero
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - velero.timourhomelab.org
    secretName: velero-tls
  rules:
  - host: velero.timourhomelab.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: velero-ui
            port:
              number: 80
